--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <!-- Fontawesome -->
     <script src="https://kit.fontawesome.com/111bcb4d15.js" crossorigin="anonymous"></script>
     <!-- CSS -->
-    <link rel="stylesheet" href="./output.css">
+    <link rel="stylesheet" href="../public/output.css">
     <title>Vite App</title>
 </head>
 
