--- a/index.html
+++ b/index.html
@@ -24,34 +24,34 @@
     <div
         id="open-page"
         class="max-w-full w-full h-full absolute z-9999 min-h-screen bg-cover bg-bottom bg-no-repeat"
-        style="background-image: url('./assets/jawir-background-123.jpg');"
+        style="background-image: url('./jawir-background-123.jpg');"
     >
         <div>
             <div class="absolute inset-0 flex justify-between overflow-hidden">
                 <div class="relative w-full animate-fade-right animate-duration-1000 animate-delay-500">
-                    <img src="./assets/orn-2-min.png" alt=""
+                    <img src="./orn-2-min.png" alt=""
                         class="absolute w-25 bottom-25 -left-10 transform scale-x-[-1] animate-wiggle-more animate-infinite animate-duration-[11000ms] animate-ease-in-out">
-                    <img src="./assets/wayang1.png" alt=""
+                    <img src="./wayang1.png" alt=""
                         class="absolute bottom-15 -left-15 animate-wiggle animate-infinite animate-reverse animate-duration-[3000ms] animate-ease-in-out">
-                    <img src="./assets/orn-37-min.png" alt="" class="absolute transform scale-x-[-1] -bottom-5">
-                    <img src="./assets/orn-28-min.png" alt="" class="absolute w-30 bottom-0 left-8">
-                    <img src="./assets/orn-3-min.png" alt=""
+                    <img src="./orn-37-min.png" alt="" class="absolute transform scale-x-[-1] -bottom-5">
+                    <img src="./orn-28-min.png" alt="" class="absolute w-30 bottom-0 left-8">
+                    <img src="./orn-3-min.png" alt=""
                         class="absolute w-25 -bottom-10 -left-8 animate-wiggle animate-infinite animate-duration-[4000ms] animate-ease-in-out animate-normal animate-fill-both">
-                    <img src="./assets/orn-8-min.png" alt=""
+                    <img src="./orn-8-min.png" alt=""
                         class="absolute w-30 transform scale-x-[-1] -bottom-5 -left-10">
                 </div>
 
                 <div class="relative w-full animate-fade-left animate-duration-1000 animate-delay-500">
-                    <img src="./assets/orn-2-min.png" alt=""
+                    <img src="./orn-2-min.png" alt=""
                         class="absolute w-25 bottom-25 -right-10 animate-wiggle-more animate-infinite animate-duration-[11000ms] animate-ease-in-out">
-                    <img src="./assets/wayang1.png" alt=""
+                    <img src="./wayang1.png" alt=""
                         class="absolute bottom-15 -right-15 transform scale-x-[-1] animate-wiggle animate-reverse animate-infinite animate-duration-[3000ms] animate-ease-in-out">
-                    <img src="./assets/orn-37-min.png" alt="" class="absolute -bottom-5">
-                    <img src="./assets/orn-28-min.png" alt=""
+                    <img src="./orn-37-min.png" alt="" class="absolute -bottom-5">
+                    <img src="./orn-28-min.png" alt=""
                         class="absolute w-30 transform scale-x-[-1] bottom-0 right-8">
-                    <img src="./assets/orn-3-min.png" alt=""
+                    <img src="./orn-3-min.png" alt=""
                         class="absolute transform scale-x-[-1] w-25 -bottom-10 -right-8 animate-wiggle animate-infinite animate-duration-[4000ms] animate-ease-in-out animate-normal animate-fill-both">
-                    <img src="./assets/orn-8-min.png" alt="" class="absolute w-30 -bottom-10 -right-2">
+                    <img src="./orn-8-min.png" alt="" class="absolute w-30 -bottom-10 -right-2">
                 </div>
             </div>
 
@@ -76,7 +76,7 @@
 
     <!-- Halaman 1 -->
     <div id="next-page" class="hidden max-w-[425px] w-full relative">
-        <video src="./assets/ASSET-FALLBACK-MOTION-JAVA-NEW.mp4" controls autoplay loop muted class="w-full">
+        <video src="./ASSET-FALLBACK-MOTION-JAVA-NEW.mp4" controls autoplay loop muted class="w-full">
     </div>
 </body>
 
