--- a/index.html
+++ b/index.html
@@ -24,51 +24,64 @@
     <div
         id="open-page"
         class="max-w-full w-full h-full absolute z-9999 min-h-screen bg-cover bg-bottom bg-no-repeat"
-        style="background-image: url('./jawir-background-123.jpg');"
+        style="background-image: url('./assets/jawir-background-123.jpg');"
     >
         <div>
             <div class="absolute inset-0 flex justify-between overflow-hidden">
                 <div class="relative w-full animate-fade-right animate-duration-1000 animate-delay-500">
-                    <img src="./orn-2-min.png" alt=""
-                        class="absolute w-25 bottom-25 -left-10 transform scale-x-[-1] animate-wiggle-more animate-infinite animate-duration-[11000ms] animate-ease-in-out">
-                    <img src="./wayang1.png" alt=""
-                        class="absolute bottom-15 -left-15 animate-wiggle animate-infinite animate-reverse animate-duration-[3000ms] animate-ease-in-out">
-                    <img src="./orn-37-min.png" alt="" class="absolute transform scale-x-[-1] -bottom-5">
-                    <img src="./orn-28-min.png" alt="" class="absolute w-30 bottom-0 left-8">
-                    <img src="./orn-3-min.png" alt=""
-                        class="absolute w-25 -bottom-10 -left-8 animate-wiggle animate-infinite animate-duration-[4000ms] animate-ease-in-out animate-normal animate-fill-both">
-                    <img src="./orn-8-min.png" alt=""
-                        class="absolute w-30 transform scale-x-[-1] -bottom-5 -left-10">
+                    <img src="./assets/orn-2-min.png" alt=""
+                        class="absolute w-25 bottom-25 -left-10 transform scale-x-[-1] lg:w-50 lg:bottom-20 lg:-left-20 animate-wiggle-more animate-infinite animate-duration-[11000ms] animate-ease-in-out">
+                    <img src="./assets/wayang1.png" alt=""
+                        class="absolute bottom-15 -left-15 lg:w-100 lg:bottom-0 lg:-left-35 animate-wiggle animate-infinite animate-reverse animate-duration-[3000ms] animate-ease-in-out">
+                    <img src="./assets/orn-37-min.png" alt=""
+                        class="absolute transform scale-x-[-1] -bottom-5 lg:-bottom-25 lg:-left-50">
+                    <img src="./assets/orn-28-min.png" alt=""
+                        class="absolute w-30 bottom-0 left-8 lg:w-50 lg:-bottom-10 lg:left-15">
+                    <img src="./assets/orn-3-min.png" alt=""
+                        class="absolute transform scale-x-[-1] w-25 -bottom-10 -left-8 lg:w-30 lg:-bottom-5 lg:-left-2 animate-wiggle animate-infinite animate-duration-[4000ms] animate-ease-in-out animate-normal animate-fill-both">
+                    <img src="./assets/orn-8-min.png" alt=""
+                        class="absolute w-30 transform scale-x-[-1] -bottom-5 -left-10 lg:w-40">
                 </div>
 
                 <div class="relative w-full animate-fade-left animate-duration-1000 animate-delay-500">
-                    <img src="./orn-2-min.png" alt=""
-                        class="absolute w-25 bottom-25 -right-10 animate-wiggle-more animate-infinite animate-duration-[11000ms] animate-ease-in-out">
-                    <img src="./wayang1.png" alt=""
-                        class="absolute bottom-15 -right-15 transform scale-x-[-1] animate-wiggle animate-reverse animate-infinite animate-duration-[3000ms] animate-ease-in-out">
-                    <img src="./orn-37-min.png" alt="" class="absolute -bottom-5">
-                    <img src="./orn-28-min.png" alt=""
-                        class="absolute w-30 transform scale-x-[-1] bottom-0 right-8">
-                    <img src="./orn-3-min.png" alt=""
-                        class="absolute transform scale-x-[-1] w-25 -bottom-10 -right-8 animate-wiggle animate-infinite animate-duration-[4000ms] animate-ease-in-out animate-normal animate-fill-both">
-                    <img src="./orn-8-min.png" alt="" class="absolute w-30 -bottom-10 -right-2">
+                    <img src="./assets/orn-2-min.png" alt=""
+                        class="absolute w-25 bottom-25 -right-10 lg:w-50 lg:bottom-20 lg:-right-20 animate-wiggle-more animate-infinite animate-duration-[11000ms] animate-ease-in-out">
+                    <img src="./assets/wayang1.png" alt=""
+                        class="absolute bottom-15 -right-15 lg:w-100 lg:-right-35 lg:bottom-0 transform scale-x-[-1] animate-wiggle animate-reverse animate-infinite animate-duration-[3000ms] animate-ease-in-out">
+                    <img src="./assets/orn-37-min.png" alt=""
+                        class="absolute -bottom-5 lg:-bottom-25 lg:-right-50">
+                    <img src="./assets/orn-28-min.png" alt=""
+                        class="absolute w-30 transform scale-x-[-1] bottom-0 right-8 lg:w-50 lg:-bottom-10 lg:right-15">
+                    <img src="./assets/orn-3-min.png" alt=""
+                        class="absolute transform scale-x-[-1] w-25 -bottom-10 -right-8 lg:w-30 lg:-bottom-5 lg:-rifht-2 animate-wiggle animate-infinite animate-duration-[4000ms] animate-ease-in-out animate-normal animate-fill-both">
+                    <img src="./assets/orn-8-min.png" alt=""
+                        class="absolute w-30 -bottom-10 -right-2 lg:w-40">
                 </div>
             </div>
 
-            <div class="animate-fade-up absolute inset-0 flex flex-col items-center justify-between pt-25 pb-20 sm:pb-50">
+            <div class="animate-fade-up absolute inset-0 flex flex-col items-center justify-between pt-25 pb-20 sm:pb-50 lg:pb-5">
                 <div class="w-full inset-0 flex flex-col items-center justify-center gap-5">
-                    <span class="font-lora font-bold text-black text-xs">THE WEDDING OF</span>
-                    <span class="font-great font-bold text-[#521111] text-5xl">Tiara & Jalu</span>
+                    <span class="font-lora font-bold text-black text-xs lg:text-xl">THE WEDDING OF</span>
+                    <span class="font-great font-bold text-[var(--primary-color)] text-5xl lg:text-8xl">Tiara & Jalu</span>
                 </div>
-                <div class="w-full inset-0 flex flex-col items-center justify-center gap-5">
-                    <span class="font-lora font-bold lg:text-xl">Kepada Yth:</span>
-                    <span class="font-lora text-2xl text-[#521111] font-bold">Aminudin</span>
+                <div class="sm:w-50 lg:w-150 border-3 border-white bg-[#ffffff80] rounded-2xl flex flex-col items-center justify-center p-5 lg:gap-5">
+                    <span class="font-lora font-bold lg:text-2xl">Kepada Yth:</span>
+                    <span
+                        id="guest-name"
+                        class="font-lora text-2xl text-[var(--primary-color)] font-bold lg:text-5xl"
+                    ></span>
                     <button
                         id="open-btn"
-                        class="font-lora bg-[#ddc198] hover:bg-[#521111] text-white text-xs border-black border-1 rounded-3xl cursor-pointer py-2 px-4"
+                        class="font-lora bg-[var(--secondary-color)] text-white text-xs border-black border-1 rounded-3xl cursor-pointer py-2 px-4
+                        lg:text-xl
+                        hover:bg-[var(--primary-color)] active:bg-[var(--primary-color)] focus:bg-[var(--primary-color)]"
                     >
                         <i class="fa-solid fa-envelope-open-text"></i> Buka Undangan
                     </button>
+                    <div class="font-lora font-bold flex flex-col items-center">
+                        <span class="text-xl">Minggu, 18 Mei 2025</span>
+                        <span>Gedung Kartini Sragen</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -76,7 +89,7 @@
 
     <!-- Halaman 1 -->
     <div id="next-page" class="hidden max-w-[425px] w-full relative">
-        <video src="./ASSET-FALLBACK-MOTION-JAVA-NEW.mp4" controls autoplay loop muted class="w-full">
+        <video src="./assets/ASSET-FALLBACK-MOTION-JAVA-NEW.mp4" controls autoplay loop muted class="w-full">
     </div>
 </body>
 
