--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <title>Vite App</title>
 </head>
 
-<body id="body" class="flex items-center justify-center min-h-screen">
+<body id="body" class="flex flex-col items-center justify-center min-h-screen">
     <!-- Halaman Buka Undangan -->
     <div
         id="open-page"
-        class="max-w-full w-full h-full absolute z-9999 min-h-screen bg-cover bg-bottom bg-no-repeat"
+        class="max-w-full w-full h-full z-9999 min-h-screen bg-cover bg-bottom bg-no-repeat"
         style="background-image: url('./assets/jawir-background-123.jpg');"
     >
         <div>
@@ -88,7 +88,8 @@
     </div>
 
     <!-- Halaman 1 -->
-    <div id="next-page" class="hidden max-w-[425px] w-full relative">
+    <div id="next-page"
+        class="hidden max-w-[425px] w-full relative">
         <video src="./assets/ASSET-FALLBACK-MOTION-JAVA-NEW.mp4" controls autoplay loop muted class="w-full">
     </div>
 </body>
