--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
                                 <span class="title font-bold opacity-0 font-great text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">Quote</span>
                                 <div class="quote-containier w-[70%] h-75 relative z-1">
                                     <div class="flex flex-col gap-2 p-3 rounded-2xl bg-[var(--tertiary-color)]">
-                                        <p class="description font-lora text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
+                                        <p class="description font-lora opacity-0 text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
                                             “Semoga Allah rekatkan keberkahan padamu (di kala senang), dan semoga Allah rekatkan keberkahan kalian berdua (di kala susah), dan semoga Allah selalu menghimpun kalian berdua dalam kebaikan.”
                                         </p>
-                                        <p class="detail font-lora font-bold text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
+                                        <p class="detail font-lora opacity-0 font-bold text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
                                             (Doa Nabi Muhammad SAW saat pernikahan Fatimah Az-Zahra dengan Ali bin Abi Thalib)
                                         </p>
                                     </div>
@@ -266,7 +266,7 @@
                                 <span class="detail opacity-0 font-lora text-sm text-center text-[var(--quaternary-color)]">Bapak Gintoro & Ibu Eny Rahayu</span>
                             </div>
                         </div>
-                        <span class="line font-great text-9xl text-[var(--primary-color)] mt-10">&</span>
+                        <span class="line font-great opacity-0 text-9xl text-[var(--primary-color)] mt-10">&</span>
                         <div class="relative w-full flex flex-col items-center">
                             <div class="w-[70%]">
                                 <img src="./assets/mempelai/m-pria-border.png" alt=""
@@ -319,22 +319,22 @@
             <!-- Footer -->
             <div class="relative w-full">
                 <img src="./assets/elements/orn-25-min.png" alt=""
-                    class="orn-footer absolute w-[40%] -top-2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
+                    class="orn-footer absolute opacity-0 w-[40%] -top-2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
                 <div>
                     <img src="./assets/elements/orn-3-min.png" alt=""
-                        class="orn-3-quote-left absolute transform scale-x-[-1] w-[20%] -left-2 -top-25 md:-top-50 lg:-top-25">
+                        class="orn-3-quote-left absolute opacity-0 transform scale-x-[-1] w-[20%] -left-2 -top-25 md:-top-50 lg:-top-25">
                     <img src="./assets/elements/orn-14-min.png" alt=""
-                        class="orn-footer absolute w-[20%] left-12 -top-10 md:w-[15%] md:left-35 lg:w-[20%] lg:left-12">
+                        class="orn-footer absolute opacity-0 w-[20%] left-12 -top-10 md:w-[15%] md:left-35 lg:w-[20%] lg:left-12">
                     <img src="./assets/elements/orn-8-min.png" alt=""
-                        class="orn-footer absolute transform scale-x-[-1] w-[25%] -left-2 -top-8 md:-top-15 lg:-top-8">
+                        class="orn-footer absolute opacity-0 transform scale-x-[-1] w-[25%] -left-2 -top-8 md:-top-15 lg:-top-8">
                 </div>
                 <div>
                     <img src="./assets/elements/orn-3-min.png" alt=""
-                        class="orn-3-quote-right absolute w-[20%] -right-2 -top-25 md:-top-50 lg:-top-25">
+                        class="orn-3-quote-right absolute opacity-0 w-[20%] -right-2 -top-25 md:-top-50 lg:-top-25">
                     <img src="./assets/elements/orn-14-min.png" alt=""
-                        class="orn-footer absolute transform scale-x-[-1] w-[20%] right-12 -top-10 md:w-[15%] md:right-35 lg:w-[20%] lg:right-12">
+                        class="orn-footer absolute transform opacity-0 scale-x-[-1] w-[20%] right-12 -top-10 md:w-[15%] md:right-35 lg:w-[20%] lg:right-12">
                     <img src="./assets/elements/orn-8-min.png" alt=""
-                        class="orn-footer absolute w-[25%] -right-2 -top-8 md:-top-15 lg:-top-8">
+                        class="orn-footer absolute opacity-0 w-[25%] -right-2 -top-8 md:-top-15 lg:-top-8">
                 </div>
             </div>
 
@@ -355,23 +355,23 @@
                             Dengan memohon keridhaan Allah SWT dan segala kerendahan hati Bapak/Ibu/Sdr/i, izinkan kami menyelenggarakan pernikahan putra putri kami yang akan dilaksanakan pada:
                         </p>
                         <div class="flex flex-col items-center gap-0 md:gap-2 lg:gap-0">
-                            <span class="description font-lora font-bold text-2xl md:text-5xl lg:text-2xl text-[var(--primary-color)]">Minggu</span>
-                            <span class="detail font-lora text-xl md:text-3xl lg:text-xl text-[var(--primary-color)]">18 Mei 2024</span>
+                            <span class="description font-lora opacity-0 font-bold text-2xl md:text-5xl lg:text-2xl text-[var(--primary-color)]">Minggu</span>
+                            <span class="detail font-lora opacity-0 text-xl md:text-3xl lg:text-xl text-[var(--primary-color)]">18 Mei 2024</span>
                         </div>
                         <hr class="line bg-[var(--primary-color)] h-[1px] w-[70%] mt-[1em] mb-[1em] border-1 border-[var(--primary-color)] rounded">
                         <div class="flex flex-col items-center gap-0 md:gap-2 lg:gap-0">
-                            <span class="description font-lora font-bold text-2xl md:text-5xl lg:text-2xl text-[var(--primary-color)]">Akad Nikah</span>
-                            <span class="detail font-lora text-xl md:text-3xl lg:text-xl text-[var(--primary-color)]">08.00-09.00 WIB</span>
+                            <span class="description font-lora opacity-0 font-bold text-2xl md:text-5xl lg:text-2xl text-[var(--primary-color)]">Akad Nikah</span>
+                            <span class="detail font-lora opacity-0 text-xl md:text-3xl lg:text-xl text-[var(--primary-color)]">08.00-09.00 WIB</span>
                         </div>
                         <hr class="line bg-[var(--primary-color)] h-[1px] w-[70%] mt-[1em] mb-[1em] border-1 border-[var(--primary-color)] rounded">
                         <div class="flex flex-col items-center gap-0 md:gap-2 lg:gap-0">
-                            <span class="description font-lora font-bold text-2xl md:text-5xl lg:text-2xl text-[var(--primary-color)]">Resepsi</span>
-                            <span class="detail font-lora text-xl md:text-3xl lg:text-xl text-[var(--primary-color)]">11.00-13.00 WIB</span>
+                            <span class="description font-lora opacity-0 font-bold text-2xl md:text-5xl lg:text-2xl text-[var(--primary-color)]">Resepsi</span>
+                            <span class="detail font-lora opacity-0 text-xl md:text-3xl lg:text-xl text-[var(--primary-color)]">11.00-13.00 WIB</span>
                         </div>
                         <hr class="line bg-[var(--primary-color)] h-[1px] w-[70%] mt-[1em] mb-[1em] border-1 border-[var(--primary-color)] rounded">
                         <div class="flex flex-col items-center gap-0 md:gap-2 lg:gap-0">
-                            <span class="description font-lora font-bold text-2xl md:text-5xl lg:text-2xl text-[var(--primary-color)]">Lokasi</span>
-                            <span class="detail font-lora text-xl md:text-3xl lg:text-xl text-[var(--primary-color)]">Gedung Kartini Sragen</span>
+                            <span class="description font-lora opacity-0 font-bold text-2xl md:text-5xl lg:text-2xl text-[var(--primary-color)]">Lokasi</span>
+                            <span class="detail font-lora opacity-0 text-xl md:text-3xl lg:text-xl text-[var(--primary-color)]">Gedung Kartini Sragen</span>
                             <a
                                 href="https://maps.app.goo.gl/U8AcetXM5meL4NJC6" target="_blank" rel="noopener noreferrer"
                                 class="button w-full mt-2 flex items-center justify-center gap-2 font-lora bg-[var(--primary-color)] text-white text-sm border-black border-1 rounded-3xl cursor-pointer py-2 px-4
@@ -390,22 +390,22 @@
             <!-- Footer -->
             <div class="relative w-full">
                 <img src="./assets/elements/orn-25-min.png" alt=""
-                    class="orn-footer absolute w-[40%] -top-2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
+                    class="orn-footer absolute opacity-0 w-[40%] -top-2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
                 <div>
                     <img src="./assets/elements/orn-3-min.png" alt=""
-                        class="orn-3-quote-left absolute transform scale-x-[-1] w-[20%] -left-2 -top-25 md:-top-50 lg:-top-25">
+                        class="orn-3-quote-left absolute opacity-0 transform scale-x-[-1] w-[20%] -left-2 -top-25 md:-top-50 lg:-top-25">
                     <img src="./assets/elements/orn-14-min.png" alt=""
-                        class="orn-footer absolute w-[20%] left-12 -top-10 md:w-[15%] md:left-35 lg:w-[20%] lg:left-12">
+                        class="orn-footer absolute opacity-0 w-[20%] left-12 -top-10 md:w-[15%] md:left-35 lg:w-[20%] lg:left-12">
                     <img src="./assets/elements/orn-8-min.png" alt=""
-                        class="orn-footer absolute transform scale-x-[-1] w-[25%] -left-2 -top-8 md:-top-15 lg:-top-8">
+                        class="orn-footer absolute opacity-0 transform scale-x-[-1] w-[25%] -left-2 -top-8 md:-top-15 lg:-top-8">
                 </div>
                 <div>
                     <img src="./assets/elements/orn-3-min.png" alt=""
-                        class="orn-3-quote-right absolute w-[20%] -right-2 -top-25 md:-top-50 lg:-top-25">
+                        class="orn-3-quote-right absolute opacity-0 w-[20%] -right-2 -top-25 md:-top-50 lg:-top-25">
                     <img src="./assets/elements/orn-14-min.png" alt=""
-                        class="orn-footer absolute transform scale-x-[-1] w-[20%] right-12 -top-10 md:w-[15%] md:right-35 lg:w-[20%] lg:right-12">
+                        class="orn-footer absolute transform opacity-0 scale-x-[-1] w-[20%] right-12 -top-10 md:w-[15%] md:right-35 lg:w-[20%] lg:right-12">
                     <img src="./assets/elements/orn-8-min.png" alt=""
-                        class="orn-footer absolute w-[25%] -right-2 -top-8 md:-top-15 lg:-top-8">
+                        class="orn-footer absolute opacity-0 w-[25%] -right-2 -top-8 md:-top-15 lg:-top-8">
                 </div>
             </div>
 
