--- a/index.html
+++ b/index.html
@@ -350,31 +350,31 @@
             <section class="lg:border-8 border-[var(--secondary-color)] lg:max-w-[425px]">
                 <section class="py-15 px-5 md:py-25 md:px-10 lg:py-15 lg:px-5">
                     <div class="flex flex-col justify-center items-center gap-2 border-3 border-[var(--primary-color)] rounded-2xl bg-[var(--tertiary-color-transparant)] px-2 py-5 md:px-4 md:py-10 lg:px-2 lg:py-5">
-                        <span class="title font-hurricane font-bold text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">Acara Pernikahan</span>
-                        <p class="description font-lora text-sm md:text-2xl lg:text-xl text-center text-[var(--quaternary-color)]">
+                        <span class="title font-hurricane opacity-0 font-bold text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">Acara Pernikahan</span>
+                        <p class="description font-lora opacity-0 text-sm md:text-2xl lg:text-xl text-center text-[var(--quaternary-color)]">
                             Dengan memohon keridhaan Allah SWT dan segala kerendahan hati Bapak/Ibu/Sdr/i, izinkan kami menyelenggarakan pernikahan putra putri kami yang akan dilaksanakan pada:
                         </p>
                         <div class="flex flex-col items-center gap-0 md:gap-2 lg:gap-0">
                             <span class="description font-lora opacity-0 font-bold text-2xl md:text-5xl lg:text-2xl text-[var(--primary-color)]">Minggu</span>
                             <span class="detail font-lora opacity-0 text-xl md:text-3xl lg:text-xl text-[var(--primary-color)]">18 Mei 2024</span>
                         </div>
-                        <hr class="line bg-[var(--primary-color)] h-[1px] w-[70%] mt-[1em] mb-[1em] border-1 border-[var(--primary-color)] rounded">
+                        <hr class="line opacity-0 bg-[var(--primary-color)] h-[1px] w-[70%] mt-[1em] mb-[1em] border-1 border-[var(--primary-color)] rounded">
                         <div class="flex flex-col items-center gap-0 md:gap-2 lg:gap-0">
                             <span class="description font-lora opacity-0 font-bold text-2xl md:text-5xl lg:text-2xl text-[var(--primary-color)]">Akad Nikah</span>
                             <span class="detail font-lora opacity-0 text-xl md:text-3xl lg:text-xl text-[var(--primary-color)]">08.00-09.00 WIB</span>
                         </div>
-                        <hr class="line bg-[var(--primary-color)] h-[1px] w-[70%] mt-[1em] mb-[1em] border-1 border-[var(--primary-color)] rounded">
+                        <hr class="line opacity-0 bg-[var(--primary-color)] h-[1px] w-[70%] mt-[1em] mb-[1em] border-1 border-[var(--primary-color)] rounded">
                         <div class="flex flex-col items-center gap-0 md:gap-2 lg:gap-0">
                             <span class="description font-lora opacity-0 font-bold text-2xl md:text-5xl lg:text-2xl text-[var(--primary-color)]">Resepsi</span>
                             <span class="detail font-lora opacity-0 text-xl md:text-3xl lg:text-xl text-[var(--primary-color)]">11.00-13.00 WIB</span>
                         </div>
-                        <hr class="line bg-[var(--primary-color)] h-[1px] w-[70%] mt-[1em] mb-[1em] border-1 border-[var(--primary-color)] rounded">
+                        <hr class="line opacity-0 bg-[var(--primary-color)] h-[1px] w-[70%] mt-[1em] mb-[1em] border-1 border-[var(--primary-color)] rounded">
                         <div class="flex flex-col items-center gap-0 md:gap-2 lg:gap-0">
                             <span class="description font-lora opacity-0 font-bold text-2xl md:text-5xl lg:text-2xl text-[var(--primary-color)]">Lokasi</span>
                             <span class="detail font-lora opacity-0 text-xl md:text-3xl lg:text-xl text-[var(--primary-color)]">Gedung Kartini Sragen</span>
                             <a
                                 href="https://maps.app.goo.gl/U8AcetXM5meL4NJC6" target="_blank" rel="noopener noreferrer"
-                                class="button w-full mt-2 flex items-center justify-center gap-2 font-lora bg-[var(--primary-color)] text-white text-sm border-black border-1 rounded-3xl cursor-pointer py-2 px-4
+                                class="button opacity-0 w-full mt-2 flex items-center justify-center gap-2 font-lora bg-[var(--primary-color)] text-white text-sm border-black border-1 rounded-3xl cursor-pointer py-2 px-4
                                 md:text-4xl lg:text-xl
                                 active:scale-95 focus:bg-[var(--primary-color)]"
                             >
@@ -462,7 +462,7 @@
                 <a
                     href="https://www.google.com/calendar/render?action=TEMPLATE&text=Acara+Pernikahan+TIARA+%26+JALU&details=Acara+Pernikahan+TIARA+%26+JALU&location=Gedung+Kartini%2C+Sine%2C+Tengah%2C+Kec.+Sragen%2C+Kabupaten+Sragen%2C+Jawa+Tengah+57211%2C+Indonesia&dates=20250518T010000Z%2F20250518T060000Z"
                     target="_blank" rel="noopener noreferrer"
-                    class="button w-[70%] mt-15 md:mt-25 lg:mt-15 flex items-center justify-center gap-2 font-lora bg-[var(--primary-color)] text-white text-sm text-center border-black border-1 rounded-3xl cursor-pointer py-2 px-4
+                    class="button opacity-0 w-[70%] mt-15 md:mt-25 lg:mt-15 flex items-center justify-center gap-2 font-lora bg-[var(--primary-color)] text-white text-sm text-center border-black border-1 rounded-3xl cursor-pointer py-2 px-4
                     md:text-2xl lg:text-sm
                     active:scale-95 focus:bg-[var(--primary-color)]"
                 >
